<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/stats_tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?graph_stats_card_background_faded"
        app:layout_constraintBottom_toTopOf="@+id/stats_step_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/stats_tab_improvement"
            style="@style/StatTabTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/outline_background_card_button"
            android:text="@string/graph_stats_tab_title_improvement"
            android:textColor="?graph_stats_card_text_color" />

        <TextView
            android:layout_margin="4dp"
            android:id="@+id/stats_tab_average"
            style="@style/StatTabTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/outline_background_card_button_faded"
            android:text="@string/graph_stats_tab_title_average"
            android:textColor="?graph_stats_card_text_color_faded" />

        <TextView
            android:layout_margin="4dp"
            android:id="@+id/stats_tab_other"
            style="@style/StatTabTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/outline_background_card_button_faded"
            android:text="@string/graph_stats_tab_title_other"
            android:textColor="?graph_stats_card_text_color_faded" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/stats_step_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="gone"
        android:background="?graph_stats_card_background_faded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_tab_layout">

        <LinearLayout
            android:id="@+id/stats_step_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <ViewFlipper
        android:id="@+id/stats_table_viewflipper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_step_scroll">

        <include
            android:id="@+id/stats_table_improvement"
            layout="@layout/item_stats_table_grid" />

        <include
            android:id="@+id/stats_table_average"
            layout="@layout/item_stats_table_grid" />

        <include
            android:id="@+id/stats_table_other"
            layout="@layout/item_stats_table_grid" />


    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>